test/error/iocheck/err5.rzy
// Error: response is not allowed to output

component
  Err5
    response what():R{0,100};
    signal   event();
      
  implementation elementary
    
    function bar()
      event();
    end
    
    function foo()
      bar();
    end
    
    response what():R{0,100}
      foo();
      return 0;
    end
    
  end

